<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:label="@string/nav_header_title"
        android:name="com.breathe.breathelk.MenuUI.Default.Frag_Default"
        tools:layout="@layout/frag__default_fragment"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.breathe.breathelk.MenuUI.Profile.Frag_Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/frag__profile_fragment" >
    </fragment>

    <fragment
        android:id="@+id/nav_self_care"
        android:name="com.breathe.breathelk.ui.gallery.GalleryFragment"
        android:label="@string/menu_daily_self_care"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_read_article"
        android:name="com.breathe.breathelk.MenuUI.ReadArticles.Frag_ReadArticles"
        android:label="@string/menu_read_articles"
        tools:layout="@layout/frag__read_articles_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.breathe.breathelk.MenuUI.Settings.Frag_Settings"
        android:label="@string/menu_settings"
        tools:layout="@layout/frag__settings_fragment" />

</navigation>