<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_AboutBreathe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgLogo"
            android:transitionName="imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <ScrollView
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtAboutApp"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/about_app"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_content_about"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_p1"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_p2"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_p3"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_b1"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_b2"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_b3"/>
                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_b4"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>