<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Activity_Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgLogo"
            android:transitionName="imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <LinearLayout
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/txtCaption"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/join_breathe"/>
    </LinearLayout>

    <ScrollView
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:paddingBottom="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtName"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtName"
                    android:id="@+id/txtUserName"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtUserName"
                    android:id="@+id/txtEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtEmail"
                    android:id="@+id/txtPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtPassword"
                    android:id="@+id/txtConfirmPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"/>

                <CheckBox
                    android:layout_marginTop="10dp"
                    android:id="@+id/chkTermsConditions"
                    android:layout_below="@id/txtConfirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_agree_terms"/>

                <TextView
                    android:layout_alignTop="@id/chkTermsConditions"
                    android:layout_alignBottom="@id/chkTermsConditions"
                    android:gravity="center"
                    android:layout_marginStart="6dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_toEndOf="@id/chkTermsConditions"
                    android:layout_below="@id/txtConfirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_conditions"/>

                <Button
                    android:transitionName="btnTransition_2"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:background="@drawable/rounded_button_signup"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:layout_marginTop="20dp"
                    android:id="@+id/btnSignUp"
                    android:layout_below="@id/chkTermsConditions"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"/>

                <TextView
                    android:id="@+id/txtAlreadyHaveAcc"
                    android:layout_marginTop="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/already_have_account"/>

                <Button
                    android:transitionName="btnTransition_1"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:background="@drawable/rounded_button_signin"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:layout_marginTop="5dp"
                    android:id="@+id/btnSignIn"
                    android:layout_below="@id/txtAlreadyHaveAcc"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"/>

            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>




</LinearLayout>