<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Signin"
    android:paddingTop="50dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgLogo"
            android:transitionName="imgLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_username"/>

        <EditText
            android:layout_marginTop="5dp"
            android:layout_below="@id/txtEmail"
            android:id="@+id/txtPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="35dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:transitionName="btnTransition_1"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:background="@drawable/rounded_button_signin"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>

        <Button
            android:transitionName="btnTransition_2"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:background="@drawable/rounded_button_signup"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:id="@+id/btnSignUp"
            android:layout_below="@id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>

    </RelativeLayout>

</LinearLayout>