<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Activity_Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgLogo"
            android:transitionName="imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <LinearLayout
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/txtCaption"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/personal_information"/>
    </LinearLayout>

    <ScrollView
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layoutContainer"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtName"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtName"
                    android:id="@+id/layoutAgeGender"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <EditText
                        android:hint="@string/age"
                        android:entries="@array/cmb_gender"
                        android:layout_alignParentStart="true"
                        android:id="@+id/txtAge"
                        android:inputType="numberSigned"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"/>
                    <Spinner
                        android:entries="@array/cmb_gender"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/cmbGender"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"/>
                </RelativeLayout>

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/layoutAgeGender"
                    android:id="@+id/txtUserName"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtUserName"
                    android:id="@+id/txtPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txtPassword"
                    android:id="@+id/txtConfirmPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"/>

                <Button
                    android:transitionName="btnTransition_2"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:background="@drawable/rounded_button_signup"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:layout_marginTop="20dp"
                    android:id="@+id/btnSave"
                    android:layout_below="@id/txtConfirmPassword"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>

            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>




</LinearLayout>