<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_AbooutMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgLogo"
            android:transitionName="imgLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <LinearLayout
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/txtAboutApp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/about_app"/>
    </LinearLayout>

    <LinearLayout
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/txtTermsOfUse"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/terms_of_use"/>
    </LinearLayout>

    <LinearLayout
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/txtReportProblem"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/report_problem"/>
    </LinearLayout>

</LinearLayout>